syntax = "proto3";

package com.nodes.ui_messages.chat_nodes;


message FromChatAgentMessage {
  string node_id = 1;
  string channel_name = 2;
  string message = 3;
}

message ChatAgentMessageResponse {
  string node_id = 1;
  string channel_name = 2;
  string markdown_msg = 3;
}

